# apis_highlighter

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.rst  checkandbump.sh  pyproject.toml  setup.py
.github/workflows/: release.yml
apis/settings/: settings_test_ci.py
apis_highlighter/: active_learning.py  api_views.py  apps.py  autocomplete_light_registry.py  forms.py  highlighter.py  models.py  serializer.py  tests.py  urls.py  views.py
apis_highlighter.egg-info/: PKG-INFO  SOURCES.txt  bower.json  requires.txt  top_level.txt
apis_highlighter/migrations/: 0001_initial.py  0002_auto_20200121_1227.py  0003_annotationproject_published.py  0004_auto_20210623_2124.py  0005_remove_annotation_entity_link.py  0006_auto_20221012_1446.py
apis_highlighter/static/apis_highlighter/: apis_highlighter.css  apis_highlighter.js
default_project/: asgi.py  settings.py  urls.py  wsgi.py
