[tool.poetry]
name = "apis-highlighter"
version = "1.0.0"
description = "Highlighter module for annotations in APIS framework"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
apis-core = ">=0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
