[tool.poetry]
name = "apis-highlighter"
version = "1.0.3"
description = "Highlighter module for annotations in APIS framework"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1"
django-reversion = "^5.0"
django-crum = "^0.7.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
